# braindump-ai

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  PROJECT-STATUS.md  README.md  braindump-spec.md  claude-code-kickoff.md  config.example.json  generate_icons.py  main.py  pyproject.toml
.leann/indexes/braindump/: documents.index  documents.leann.passages.idx  documents.leann.passages.jsonl
ai-notetaking-app-files/: braindump-spec.md  claude-code-kickoff.md
server/: __init__.py  app.py  auth.py  consolidation.py  embeddings.py  git_ops.py  indexer.py  llm.py  pending_commits.py  requirements.txt
web/: index.html  login.html  manifest.json  service-worker.js
web/css/: login.css  style.css
web/js/: api.js  app.js  config.js  consolidation.js  documents.js  editor.js  login.js  recent-summary.js  search.js  todos.js
