[project]
name = "braindump"
version = "0.1.0"
description = "Personal knowledge capture system with AI-driven consolidation"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.75.0",
    "flask>=3.1.2",
    "gitpython>=3.1.46",
    "httpx>=0.28.1",
    "pillow>=12.1.0",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.0",
]

[project.scripts]
braindump = "server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]
